cluster/apps/homer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homer-service
spec:
  selector:
    app: homer
  ports:
  - port: 80
    targetPort: 8080
